deploy: 35a359b900cc007b87e3f364ba4d7f2223866339

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -482,4 +482,6 @@ pre code { font-size: 15px !important; }
 
 p code { font-size: 19px; }
 
+html, body { background-image: url("https://dashpen.github.io/blog/images/light-gradient.jpg"); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; background-color: #cccccc; }
+
 /*# sourceMappingURL=style.css.map */
