--- a/_includes/BestPageTable.html
+++ b/_includes/BestPageTable.html
@@ -7,13 +7,6 @@
 <table>
     <tr>
         <td><img src="{{site.baseurl}}//images/favicon.ico" height="60" title="" alt=""></td>
-        <td><a href="{{site.baseurl}}/frontend/overview">Overview</a></td>
-        <td><a href="{{site.baseurl}}/frontend/tutorial">Tutorial</a></td>
-        <td><a href="{{site.baseurl}}/frontend/calculator">Calculator</a></td>
-        <td><a href="{{site.baseurl}}/frontend/binary">Binary</a></td>
-        <td><a href="{{site.baseurl}}/frontend/grades">Grades</a></td>
-        <td><a href="{{site.baseurl}}/frontend/graph">Graph</a></td>
-        <td><a href="{{site.baseurl}}/frontend/life">Life</a></td>
-        <td><a href="{{site.baseurl}}/frontend/snake">Snake</a></td>
+        <td><a href="{{site.baseurl}}/Blackjack">Blackjack</a></td>
     </tr>
 </table>
