--- a/_includes/BestPageTable.html
+++ b/_includes/BestPageTable.html
@@ -8,5 +8,7 @@
     <tr>
         <td><img src="{{site.baseurl}}//images/favicon.ico" height="60" title="" alt=""></td>
         <td><a href="{{site.baseurl}}/Blackjack">Blackjack</a></td>
+        <td><a href = "{{site.baseurl}}/RedditAPI">Reddit API</a></td>
+        <td><a href = "{{site.baseurl}}/API">API</a></td>
     </tr>
 </table>
