--- a/_includes/lessonTable.html
+++ b/_includes/lessonTable.html
@@ -16,6 +16,6 @@
         <td><a href="{{site.baseurl}}/jupyter/libraries">Lesson 14-15</a></td>
         <td><a href = "{{site.baseurl}}/lesson/2022/12/12/Simulations.html">Lesson 16</a></td>
         <td><a href = "{{site.baseurl}}/lesson">Lesson 17-18</a></td>
-        <td><a href = "{{site.baseurl}}/notes">notes</a></td>
+        <td><a href = "{{site.baseurl}}/2022/12/09/vocab.html">notes</a></td>
     </tr>
 </table>
